@@ -1,6 +1,8 @@
 -------------------------------------
 	4.1-5	
 -------------------------------------
+Fixed bug that would not set Acceleration options for a VM if the
+$enableAdvancedConfig option was not set in config.php
 
 -------------------------------------
 	4.1-4	2011-10-17
